--- a/style.css
+++ b/style.css
@@ -309,3 +309,53 @@ main {
   pointer-events: none;
   transition: 0.45s cubic-bezier(0.2, 0.49, 0.32, 0.99);
 }
+
+@media (max-width: 1100px) {
+  .text h1 {
+    font-size: 5.8rem;
+  }
+
+  .text h2 {
+    font-size: 4.7rem;
+  }
+}
+
+@media (max-width: 725px) {
+  .text h1 {
+    font-size: 5rem;
+    line-height: 1.1;
+  }
+
+  .text h2 {
+    font-size: 4.7rem;
+    line-height: 1.1;
+  }
+
+  header nav {
+    padding: 0 1rem;
+  }
+
+  .log {
+    width: 75px;
+  }
+
+  header ul a {
+    padding: 0 0.9rem;
+    font-size: 0.73rem;
+  }
+
+  .searc a {
+    font-size: 0.85;
+    padding: 0 1.8rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .text h1 {
+    font-size: 3.3rem;
+  }
+
+  .text h2 {
+    font-size: 2.6rem;
+  }
+}
